--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             android:name=".activities.HistoryActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.QuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ChooseCategoryActivity"
             android:exported="false" />
         <activity
