Added activity for info for other countries, for tips for the driving exam and an activity for choosing which type of info is wanted, made the connection between these 3 activities and also to the home activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.DrivingTipsInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.OtherCountriesInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ChooseInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.HistoryActivity"
             android:exported="false" />
         <activity
