--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".activities.QuizActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.ResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ChooseCategoryActivity"
             android:exported="false" />
         <activity
