--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".activities.ResultActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.ReviewQuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ChooseCategoryActivity"
             android:exported="false" />
         <activity
